--- a/css/app.css
+++ b/css/app.css
@@ -2009,6 +2009,7 @@ img.p-eat__imgTarte {
   color: #fff;
   font-size: 1vw;
   margin-left: 1.9vw;
+  text-decoration: none;
 }
 .l-footer__link a {
   margin-left: 20px;
