--- a/scss/asset/style.scss
+++ b/scss/asset/style.scss
@@ -2401,6 +2401,7 @@ img.p-eat__imgTarte {
         color: #fff;
         font-size: 1vw;
         margin-left: 1.9vw;
+        text-decoration: none;
     }
 
     &__link a {
